# ackermann

./: .gitignore  Dockerfile  README.md  ackermann.launch  ackermann.urdf.xacro  display.launch  docker-compose.yaml  gazebo.launch
config/: front_left_steer.yaml  front_left_velocity.yaml
src/ackermann_controller/: CMakeLists.txt  package.xml
src/ackermann_controller/include/ackermann_controller/: pure_pursuit.hpp
src/ackermann_controller/src/: ackermann_controller_node.cpp  pure_pursuit.cpp
src/ackermann_gazebo_control/: CMakeLists.txt  package.xml
src/ackermann_gazebo_control/plugin/: ackermann_control_plugin.cpp  ackermann_control_plugin.hpp
src/ackermann_gazebo_control/plugins/: AckermannControlPlugin.cpp  AckermannControlPlugin.hpp
src/ackermann_msgs/: CMakeLists.txt  package.xml
src/ackermann_msgs/msg/: AckermannPath.msg  AckermannPose.msg  AckermannPoseStamped.msg  AckermannSteering.msg  AckermannSteeringStamped.msg
src/ackermann_planner/: CMakeLists.txt  package.xml
src/ackermann_planner/include/ackermann_planner/: a_star.hpp  lattice_planner.hpp  mha_star.hpp  motion_primitive.hpp  planner_utils.hpp  search_class.hpp
src/ackermann_planner/src/: a_star.cpp  ackermann_planner_node.cpp  lattice_planner.cpp  mha_star.cpp  motion_primitive.cpp
src/ackermann_planner/srv/: Goal.srv
src/ackermann_project/: CMakeLists.txt  package.xml
src/ackermann_project/config/: ackermann.rviz  ackermann.urdf.xacro
src/ackermann_project/include/ackermann_project/: ackermann_utils.hpp  planner_utils.hpp  visualization_utils.hpp
src/ackermann_project/launch/: ackermann.launch  gazebo.launch
src/ackermann_project/src/: ackermann_utils.cpp  visualization_utils.cpp
src/ackermann_visualization/: CMakeLists.txt  package.xml
src/ackermann_visualization/src/: ackermann_visualization.cpp  ackermann_visualization_node.cpp
src/gazebo_push_plugin/: CMakeLists.txt  package.xml
src/gazebo_push_plugin/launch/: model_push.launch
src/gazebo_push_plugin/plugin/: model_push.cpp
src/gazebo_push_plugin/worlds/: model_push.world
(+1 files in other folders)
